# einfach

./: .gitignore  .npmrc  .prettierrc.mjs  .swcrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  babel.config.cjs  babel.config.mjs  clean.js  fix-imports.js  jest.config.mjs  move-tests-to-old.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.mjs  tsconfig.base.json  tsconfig.build.json  tsconfig.cjs.json  tsconfig.json  tsconfig.react.json  tsconfig.test.json
.changeset/: config.json  improve-npm-discoverability.md
.cursor/: project.mdc
.github/workflows/: ci.yml  publish.yml
react/form/: CHANGELOG.md  package.json  tsconfig.json
react/form/test/: validator.test.tsx
react/react/: CHANGELOG.md  README.md  package.json  tsconfig.json
react/react/src/: index.ts  type.ts  useAtom.ts  useAtomCallback.ts  useAtomSync.ts  useAtomValue.ts  useSetAtom.ts
react/utils/: CHANGELOG.md  README.md  package.json  tsconfig.json
rules/: .eslintignore  .eslintrc  .stylelintignore  .stylelintrc.js  eslint.config.mjs  exceljs.cjs  setup-jest.mjs  uuid.cjs
rust/core/: Cargo.toml
rust/docs/: MAIN_FLOW.md  ROADMAP.md  STEPS.md
rust/excel-core/: Cargo.toml
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
solid/excel/: index.html  package.json  tsconfig.json
solid/form/: CHANGELOG.md  README.md  package.json  tsconfig.json
solid/solid/: CHANGELOG.md  README.md  package.json  tsconfig.json
vanilla/core/: CHANGELOG.md  README.md  package.json  tsconfig.json
vanilla/utils/: CHANGELOG.md  README.md  package.json  tsconfig.json
(+200 files in other folders)
