[package]
name = "einfach-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for einfach Excel engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
einfach-core = { path = "../core" }
einfach-excel-core = { path = "../excel-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
umya-spreadsheet = "2.3"

[profile.release]
opt-level = "s"
lto = true
